_sass/core/post.scss
.post-title a {
    color: $color-blue!important;
}

.meta {
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: $color-post-meta;

    .tags {
        list-style-type: none;
        margin: 0;
        padding: 0;

        li {
            float: left;
            background-color: $color-lightgrey;
            padding: 5px 20px;
            border-radius: 2px;
            margin-right: 10px;
            margin-bottom: 10px;
            text-transform: lowercase;

            a {
                color: $color-post-meta;
            }
        }
    }

    .meta-part {
        display: inline-block;

        @media screen and (max-width: $media-breakpoint-sm-max) {
            display: block;
        }
    }

    .post-date {
        margin-right: 10px;
        min-width: 150px;
        vertical-align: middle;

        @media screen and (max-width: $media-breakpoint-sm-max) {
            vertical-align: top;
        }
    }

    .vertical-bar {
        font-family: $font-sans;
        font-weight: 900;
        font-size: 1.3em;
        margin: 0 10px;
        color: $color-lightgrey;

        @media screen and (max-width: $media-breakpoint-sm-max) {
            margin: 0;
            display: none;
        }
    }

    .edit {
        margin-right: 0;
    }


}

